@@ -1,3 +1,9 @@
+2012-04-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/hc08/gen.c: fix bugs in genRLC, genRRC, and genJumpTab; support large stack
+	  offsets in rmwWithAop; optimized asmopToBool
+	* src/hc08/ralloc.c: fix bug in findAssignToSym
+
 2012-04-20 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/hc08/ralloc2.cc,
